# flashinfer

./: .bazelrc  BUILD.bazel  MODULE.bazel  kernel_instances.bzl  main.py  requirements.lock.txt  requirements.txt
aot_build_utils/: generate.py  generate_pod_inst.py
capi/: capi.cu  capi.h  capi_sm90.cu
include/flashinfer/: attention_impl.cuh
include/flashinfer/attention/: default_prefill_params.cuh  pod.cuh  scheduler.cuh
include/flashinfer/attention/hopper/: default_params.cuh
src/: flashinfer_ops.cuh  flashinfer_ops_sm90.cuh
