module(
    name = "flashinfer",
)

bazel_dep(name = "googletest", version = "1.16.0")
bazel_dep(name = "rules_cuda", version = "0.2.5")
bazel_dep(name = "rules_cc", version = "0.1.1")

archive_override(
    module_name = "rules_cuda",
    url = "https://github.com/bazel-contrib/rules_cuda/archive/4f7fe962b41e1a9cd025a0864099e895191fb9ae.tar.gz",
    strip_prefix = "rules_cuda-4f7fe962b41e1a9cd025a0864099e895191fb9ae",
)

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.toolkit(
    name = "cuda",
    toolkit_path = "/usr/local/cuda-12.8",
)
use_repo(cuda, "cuda")
